1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -1,1 +1,14 @@
-# Hello World 1234566
+::hero
+---
+client-logo-text: Trusted by +50 clients
+cta-button-link: /get-a-quote
+cta-button-text: Request a Quote
+---
+#heading
+Platforms that don't just look good
+
+**They Perform**
+
+#description
+Your platform is a tool for growth, not just a pretty face. We design with your business in mind, delivering features that boost sales and keep users coming back.
+::
