1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -1,7 +1,7 @@
 ::hero
 ---
 client-logo-text: Trusted by +50 clients
-cta-button-link: /request-a-quote
+cta-button-link: buttonlink
 cta-button-text: Request a Quote
 heading-one: Platforms that don’t just look good
 heading-two: They Perform
