--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -5,6 +5,7 @@ cta-button-link: /request-a-quote
 cta-button-text: Request a Quote
 heading-one: Platforms that don’t just look good
 heading-two: They Perform
+logo-title: From Startups to Industry Leaders
 ---
 #description
 Your platform is a tool for growth, not just a pretty face. We design with your business in mind, delivering features that boost sales and keep users coming back.
