--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -8,5 +8,5 @@ heading-two: They Perform
 logo-title: From Startups to Industry Leaders
 ---
 #description
-Your platform is a tool for growth, not just a pretty face. We design with your business in mind, delivering features that boost sales and keep users coming back.
+Your platform is a tool for growth, not just a pretty face. We design and develop with your business in mind, delivering features that boost sales and keep users coming back.
 ::
