--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -10,3 +10,17 @@ logo-title: From Startups to Industry Leaders
 #description
 Your platform is a tool for growth, not just a pretty face. We design and develop with your business in mind, delivering features that boost sales and keep users coming back.
 ::
+
+::bento-grid
+## Bento Grid 1
+
+Description
+
+![hero-light.svg](/images/hero-light.svg)
+
+## Bento Grid 2
+
+Description
+
+![hero-light_old.svg](/images/hero-light_old.svg)
+::
