2 changes by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -12,15 +12,13 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
 ::
 
 ::bento-grid
-## Bento Grid 1
-
-Description
-
-![hero-light.svg](/images/hero-light.svg)
-
-## Bento Grid 2
-
-Description
-
-![hero-light_old.svg](/images/hero-light_old.svg)
+  :::bento-card
+  ---
+  description: Best city in the USA
+  href: https://google.com
+  title: San Francisco
+  ---
+  #image
+  ![julian-paefgen-xDLj4v2PHUw-unsplash.jpg](/images/julian-paefgen-xDLj4v2PHUw-unsplash.jpg)
+  :::
 ::
