2 changes by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -19,6 +19,6 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
   title: San Francisco
   ---
   #image
-  ![julian-paefgen-xDLj4v2PHUw-unsplash.jpg](/images/julian-paefgen-xDLj4v2PHUw-unsplash.jpg)
+  ![julian-paefgen-xDLj4v2PHUw-unsplash.jpg](/images/Group%202087324140.png)
   :::
 ::
