--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -12,13 +12,50 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
 ::
 
 ::bento-grid
+  ---
   :::bento-card
   ---
-  description: Best city in the USA
-  href: https://google.com
-  title: San Francisco
+  title: Launch in Weeks
+  description: Every day your project isn’t live is a day you’re not making revenue. We launch your project in record time, so you can start growing and profiting without delays.
+  card-classes: lg:col-span-4
   ---
   #image
   ![live-in-weeks.png](/live-in-weeks.png)
+  :::
+  :::bento-card
+  ---
+  title: Growth Framework
+  description: With our Framework, we use the power of sales psychology to create platforms that inspire action and turn visitors into loyal customers.
+  card-classes: lg:col-span-2
+  ---
+  #image
+  ![live-in-weeks.png](/live-in-weeks.png)
+  :::
+  :::bento-card
+  ---
+  title: Bye Emails, Hello Slack
+  description: With Slack, you get updates, make requests, and stay in control—all faster and easier than ever.
+  card-classes: lg:col-span-3 lg:row-span-1
+  ---
+  #image
+  ![bye-emails-hello-slack.png](/images/bye-emails-hello-slack.png)
+  :::
+  :::bento-card
+  ---
+  title: Choose What’s Important to You
+  description: Our modular, interactive offers let you easily select the features that matter most. Simply add or remove what aligns with your priorities.
+  card-classes: lg:col-span-4 lg:row-span-1
+  ---
+  #image
+  ![choose-whats-important-to-you.png](/images/choose-whats-important-to-you.png)
+  :::
+  :::bento-card
+  ---
+  title: Choose What’s Important to You
+  description: Our modular, interactive offers let you easily select the features that matter most. Simply add or remove what aligns with your priorities.
+  card-classes: lg:col-span-4 lg:row-span-1
+  ---
+  #image
+  ![choose-whats-important-to-you.png](/images/choose-whats-important-to-you.png)
   :::
 ::
