--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -11,12 +11,10 @@ logo-title: From Startups to Industry Leaders
 Your platform is a tool for growth, not just a pretty face. We design and develop with your business in mind, delivering features that boost sales and keep users coming back.
 ::
 
-::bento-grid{grid-classes="lg:grid-cols-6 lg:grid-rows-1"}
----
-
+::bento-grid{grid-classes="lg:grid-cols-6 auto-rows-auto"}
   :::bento-card
   ---
-  card-classes: lg:col-span-4
+  card-classes: lg:row-span-1 lg:col-span-4
   description: Every day your project isn’t live is a day you’re not making revenue. We launch your project in record time, so you can start growing and profiting without delays.
   title: Launch in Weeks
   ---
@@ -26,7 +24,7 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
 
   :::bento-card
   ---
-  card-classes: lg:col-span-2
+  card-classes: lg:row-span-1 lg:col-span-2
   description: With our Framework, we use the power of sales psychology to create platforms that inspire action and turn visitors into loyal customers.
   title: Growth Framework
   ---
@@ -36,7 +34,7 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
 
   :::bento-card
   ---
-  card-classes: lg:col-span-3 lg:row-span-1
+  card-classes: row-span-2 lg:col-span-2
   description: With Slack, you get updates, make requests, and stay in control—all faster and easier than ever.
   title: Bye Emails, Hello Slack
   ---
@@ -58,7 +56,16 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
   ---
   card-classes: lg:col-span-4 lg:row-span-1
   description: Our modular, interactive offers let you easily select the features that matter most. Simply add or remove what aligns with your priorities.
-  title: Choose What’s Important to You
+  title: Fewer Projects, Full Attention
+  ---
+  #image
+  ![choose-whats-important-to-you.png](/images/choose-whats-important-to-you.png)
+  :::
+  :::bento-card
+  ---
+  card-classes: lg:col-span-6 lg:row-span-1
+  description: Our modular, interactive offers let you easily select the features that matter most. Simply add or remove what aligns with your priorities.
+  title: We Think Ahead for You
   ---
   #image
   ![choose-whats-important-to-you.png](/images/choose-whats-important-to-you.png)
