--- a/i18n/locales/en-US.json
+++ b/i18n/locales/en-US.json
@@ -8,6 +8,9 @@
     },
     "footer": {
         "short_description": "E-Commerce & Software Solutions for those who dare to dream bigger.",
-        "built_with": "Built with {link} – modern technology for E-Commerce & SaaS solutions"
+        "built_with": "Built with {link} – modern technology for E-Commerce & SaaS solutions",
+        "follow_us": "Follow Us",
+        "copyright": "Stride Agency. All rights reserved.",
+        "legal": "Legal"
     }
 }
