--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -15,7 +15,9 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
   :::bento-card
   ---
   card-classes: lg:row-span-1 lg:col-span-4
-  description: Every day your project isn’t live is a day you’re not making revenue. We launch your project in record time, so you can start growing and profiting without delays.
+  description: Every day your project isn’t live is a day you’re not making
+    revenue. We launch your project in record time, so you can start growing and
+    profiting without delays.
   title: Launch in Weeks
   ---
   #image
@@ -25,7 +27,8 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
   :::bento-card
   ---
   card-classes: lg:row-span-1 lg:col-span-2
-  description: With our Framework, we use the power of sales psychology to create platforms that inspire action and turn visitors into loyal customers.
+  description: With our Framework, we use the power of sales psychology to create
+    platforms that inspire action and turn visitors into loyal customers.
   title: Growth Framework
   ---
   #image
@@ -35,7 +38,8 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
   :::bento-card
   ---
   card-classes: row-span-2 lg:col-span-2
-  description: With Slack, you get updates, make requests, and stay in control—all faster and easier than ever.
+  description: With Slack, you get updates, make requests, and stay in control—all
+    faster and easier than ever.
   title: Bye Emails, Hello Slack
   ---
   #image
@@ -45,7 +49,8 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
   :::bento-card
   ---
   card-classes: lg:col-span-4 lg:row-span-1
-  description: Our modular, interactive offers let you easily select the features that matter most. Simply add or remove what aligns with your priorities.
+  description: Our modular, interactive offers let you easily select the features
+    that matter most. Simply add or remove what aligns with your priorities.
   title: Choose What’s Important to You
   ---
   #image
@@ -55,19 +60,56 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
   :::bento-card
   ---
   card-classes: lg:col-span-4 lg:row-span-1
-  description: Our modular, interactive offers let you easily select the features that matter most. Simply add or remove what aligns with your priorities.
+  description: Our modular, interactive offers let you easily select the features
+    that matter most. Simply add or remove what aligns with your priorities.
   title: Fewer Projects, Full Attention
   ---
   #image
   ![choose-whats-important-to-you.png](/images/choose-whats-important-to-you.png)
   :::
+
   :::bento-card
   ---
   card-classes: lg:col-span-6 lg:row-span-1
-  description: Our modular, interactive offers let you easily select the features that matter most. Simply add or remove what aligns with your priorities.
+  description: Our modular, interactive offers let you easily select the features
+    that matter most. Simply add or remove what aligns with your priorities.
   title: We Think Ahead for You
   ---
   #image
   ![choose-whats-important-to-you.png](/images/choose-whats-important-to-you.png)
+  :::
+::
+
+::testimonials
+  :::testimonial
+  ---
+  author-company: VISIO
+  author-name: Kaspar & Lukas
+  author-role: Founders
+  body: We had worked with other agencies before, and it was always a
+    struggle—missed deadlines, incomplete work, and endless headaches. With
+    Phillip and his team, it was completely different. They turned our designs
+    into exactly what we envisioned for our Shopify store. Even the smallest
+    details weren’t overlooked. On top of that, they handled our technical setup,
+    from custom coding to email marketing integration. It feels great to finally
+    have a partner we can rely on.
+  ---
+    ::::testimonial
+    ---
+    author-company: Bano24
+    author-name: Jörg Prowald
+    author-role: Founder
+    body: "Phillip and his team are transparent, honest, and genuinely care about
+      the success of our shop—it feels like they treat it as their own. What really
+      stands out is their availability: even on a Sunday night, I’ve gotten answers
+      to urgent questions within minutes. That kind of dedication and reliability is
+      rare, and it gives me peace of mind knowing our shop is in the best hands."
+    ---
+    #image
+    ![joerg-prowald-bano24.webp](/images/joerg-prowald-bano24.webp)
+    ::::
+  
+  #image
+  ![kaspar-and-lukas-visio-official.webp](/images/kaspar-and-lukas-visio-official.webp)
   :::
 ::
