2 changes by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -94,22 +94,38 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
     from custom coding to email marketing integration. It feels great to finally
     have a partner we can rely on.
   ---
-    ::::testimonial
-    ---
-    author-company: Bano24
-    author-name: Jörg Prowald
-    author-role: Founder
-    body: "Phillip and his team are transparent, honest, and genuinely care about
-      the success of our shop—it feels like they treat it as their own. What really
-      stands out is their availability: even on a Sunday night, I’ve gotten answers
-      to urgent questions within minutes. That kind of dedication and reliability is
-      rare, and it gives me peace of mind knowing our shop is in the best hands."
-    ---
-    #image
-    ![joerg-prowald-bano24.webp](/images/joerg-prowald-bano24.webp)
-    ::::
-  
   #image
   ![kaspar-and-lukas-visio-official.webp](/images/kaspar-and-lukas-visio-official.webp)
+  :::
+
+  :::testimonial
+  ---
+  author-company: Bano24
+  author-name: Jörg Prowald
+  author-role: Founder
+  body: "Phillip and his team are transparent, honest, and genuinely care about
+    the success of our shop—it feels like they treat it as their own. What really
+    stands out is their availability: even on a Sunday night, I’ve gotten answers
+    to urgent questions within minutes. That kind of dedication and reliability is
+    rare, and it gives me peace of mind knowing our shop is in the best hands."
+  ---
+  #image
+  ![kaspar-and-lukas-visio-official.webp](/images/joerg-prowald-bano24.webp)
+  :::
+
+  :::testimonial
+  ---
+  author-company: SAVONT
+  author-name: Phuc-An Tran
+  author-role: Founder
+  body: Expanding into international markets seemed like an overwhelming task, but
+    Phillip and his team made it simple. They handled everything—tax rules,
+    shipping settings, multilingual features—and made sure everything worked
+    seamlessly. Thanks to them, our products are now reaching customers around the
+    world. They didn’t just deliver a solution; they helped us grow in ways we
+    hadn’t even considered.
+  ---
+  #image
+  ![Phuc-An Tran SAVONT](/images/phuc-an-tran.webp)
   :::
 ::
