--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -80,7 +80,7 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
   :::
 ::
 
-::testimonials
+::testimonials{title="What our clients say"}
   :::testimonial
   ---
   author-company: VISIO
