--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -86,12 +86,10 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
   author-company: VISIO
   author-name: Kaspar & Lukas
   author-role: Founders
+  main-body: They turned our designs into exactly what we had in mind for our Shopify store.
   body: We had worked with other agencies before, and it was always a
     struggle—missed deadlines, incomplete work, and endless headaches. With
-    Phillip and his team, it was completely different. They turned our designs
-    into exactly what we envisioned for our Shopify store. Even the smallest
-    details weren’t overlooked. On top of that, they handled our technical setup,
-    from custom coding to email marketing integration. It feels great to finally
+    Phillip and his team, it was completely different. It feels great to finally
     have a partner we can rely on.
   ---
   #image
@@ -103,11 +101,10 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
   author-company: Bano24
   author-name: Jörg Prowald
   author-role: Founder
-  body: "Phillip and his team are transparent, honest, and genuinely care about
-    the success of our shop—it feels like they treat it as their own. What really
-    stands out is their availability: even on a Sunday night, I’ve gotten answers
-    to urgent questions within minutes. That kind of dedication and reliability is
-    rare, and it gives me peace of mind knowing our shop is in the best hands."
+  main-body: Even on a Sunday night, I’ve gotten answers to urgent questions within minutes.
+  body: Phillip and his team are transparent, honest, and genuinely care about
+    the success of our shop—it feels like they treat it as their own. That kind of dedication and reliability is
+    rare, and it gives me peace of mind knowing our shop is in the best hands.
   ---
   #image
   ![kaspar-and-lukas-visio-official.webp](/images/joerg-prowald-bano24.webp)
@@ -118,12 +115,11 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
   author-company: SAVONT
   author-name: Phuc-An Tran
   author-role: Founder
+  main-body: Our products are now reaching customers around the world. Stride helped us grow in ways we hadn’t even considered.
   body: Expanding into international markets seemed like an overwhelming task, but
     Phillip and his team made it simple. They handled everything—tax rules,
     shipping settings, multilingual features—and made sure everything worked
-    seamlessly. Thanks to them, our products are now reaching customers around the
-    world. They didn’t just deliver a solution; they helped us grow in ways we
-    hadn’t even considered.
+    seamlessly.
   ---
   #image
   ![Phuc-An Tran SAVONT](/images/phuc-an-tran.webp)
