--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -127,3 +127,13 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
   ![Phuc-An Tran SAVONT](/images/phuc-an-tran.webp)
   :::
 ::
+
+::accordion{title="FAQ"}
+  :::accordion-item{title="First question"}
+  This is the answer
+  :::
+
+  :::accordion-item{title="Second question"}
+  This is my second answer
+  :::
+::
