--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -128,7 +128,7 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
   :::
 ::
 
-::accordion{title="FAQ"}
+::accordion{title="Your Questions Our Answers"}
   :::accordion-item{title="First question"}
   This is the answer
   :::
