--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -128,12 +128,12 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
   :::
 ::
 
-::accordion{title="Your Questions Our Answers"}
-  :::accordion-item{title="First question"}
+::c-accordion{title="Your Questions Our Answers"}
+  :::c-accordion-item{title="First question"}
   This is the answer
   :::
 
-  :::accordion-item{title="Second question"}
+  :::c-accordion-item{title="Second question"}
   This is my second answer
   :::
 ::
