--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -3,8 +3,8 @@
 client-logo-text: Trusted by +50 clients
 cta-button-link: buttonlink
 cta-button-text: Request a Quote
-heading-one: Platforms that don’t just look good
-heading-two: They Perform
+heading-one: NextGen E-Commerce & SaaS Agency
+heading-two: We Plan, Design, Build and Sell
 logo-title: From Startups to Industry Leaders
 ---
 #description
