--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -11,6 +11,10 @@ logo-title: From Startups to Industry Leaders
 Your platform is a tool for growth, not just a pretty face. We design and develop with your business in mind, delivering features that boost sales and keep users coming back.
 ::
 
+::large-text
+**If your platform makes users hesitate, you’re losing them.** We create software that **feels intuitive from the first click** and analyze real behavior to **keep conversions climbing.**
+::
+
 ::bento-grid{grid-classes="lg:grid-cols-6 auto-rows-auto"}
   :::bento-card
   ---
