--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -12,7 +12,7 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
 ::
 
 ::large-text
-**If your platform makes users hesitate, you’re losing them.** We create software that **feels intuitive from the first click** and analyze real behavior to **keep conversions climbing.**
+**Traditional agencies build. We optimize.** Your platform shouldn’t just work—it should perform. We create **systems that adapt to real user behavior** and refine every touchpoint to **drive conversions.**
 ::
 
 ::bento-grid{grid-classes="lg:grid-cols-6 auto-rows-auto"}
