--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -12,7 +12,7 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
 ::
 
 ::large-text
-Traditional agencies build. **We build with impact.**:br Your platform shouldn’t just work—it should perform. :br **We analyze real user behavior** and refine every touchpoint to **drive conversions.**
+Traditional agencies build. **We build with impact.** :br **We analyze real user behavior** and refine every touchpoint to **drive conversions.**
 ::
 
 ::bento-grid{grid-classes="lg:grid-cols-6 auto-rows-auto"}
