1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -142,6 +142,7 @@ title: Words from our Clients
   ---
   cta-button-text: Ask a question
   cta-title: Didn’t find what you were looking for? Ask us directly.
+  description: Find out what makes us different, how pricing works, and what to expect.
   title: All You Need to Know
   ---
     ::::c-accordion-item
