--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -142,7 +142,8 @@ title: Words from our Clients
   ---
   cta-button-text: Ask a question
   cta-title: Didn’t find what you were looking for? Ask us directly.
-  description: Find out what makes us different, how pricing works, and what to expect.
+  description: Find out what makes us different, how pricing works, and what to
+    expect when working with us.
   title: All You Need to Know
   ---
     ::::c-accordion-item
