2 changes by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -25,7 +25,7 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   title: Launch in Weeks
   ---
   #image
-  ![live-in-weeks.png](/live-in-weeks.png)
+  ![live-in-weeks.png](/illustration.png)
   :::
 
   :::bento-card
