6 changes by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -36,7 +36,7 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   title: Growth Framework
   ---
   #image
-  ![live-in-weeks.png](/live-in-weeks.png)
+  ![live-in-weeks.png](/growth-framework.png)
   :::
 
   :::bento-card
@@ -47,7 +47,7 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   title: Bye Emails, Hello Slack
   ---
   #image
-  ![bye-emails-hello-slack.png](/images/bye-emails-hello-slack.png)
+  ![bye-emails-hello-slack.png](/hello-slack.png)
   :::
 
   :::bento-card
@@ -58,7 +58,7 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   title: Choose What’s Important to You
   ---
   #image
-  ![choose-whats-important-to-you.png](/images/choose-whats-important-to-you.png)
+  ![choose-whats-important-to-you.png](/choose-what-is-important-to-you.png)
   :::
 
   :::bento-card
@@ -69,7 +69,7 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   title: Fewer Projects, Full Attention
   ---
   #image
-  ![choose-whats-important-to-you.png](/images/choose-whats-important-to-you.png)
+  ![choose-whats-important-to-you.png](/fewer-projects.png)
   :::
 
   :::bento-card
@@ -80,7 +80,7 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   title: We Think Ahead for You
   ---
   #image
-  ![choose-whats-important-to-you.png](/images/choose-whats-important-to-you.png)
+  ![choose-whats-important-to-you.png](/proactive.png)
   :::
 ::
 
