1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -74,7 +74,8 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
 
   :::bento-card
   ---
-  card-classes: lg:col-span-12 lg:row-span-1 [&>div]:flex [&>div>div]:lg:w-1/2
+  card-classes: lg:col-span-12 lg:row-span-1 [&>div]:flex
+    [&>div>div:first-child]:lg:w-1/3 [&>div>div:first-child]:lg:w-2/3
     [&>div>div:first-child]:order-last
   description: Our modular, interactive offers let you easily select the features
     that matter most. Simply add or remove what aligns with your priorities.
