1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -19,9 +19,9 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   :::bento-card
   ---
   card-classes: lg:row-span-1 lg:col-span-7
-  description: Every day your project isn’t live is a day you’re not making
-    revenue. We launch your project in record time, so you can start growing and
-    profiting without delays.
+  description: Every day your project isn’t live is a day you’re losing potential
+    revenue. We move fast—without cutting corners—so you can start selling,
+    scaling, and growing in record time.
   title: Launch in Weeks
   ---
   #image
@@ -31,9 +31,10 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   :::bento-card
   ---
   card-classes: lg:row-span-1 lg:col-span-5
-  description: With our Framework, we use the power of sales psychology to create
-    platforms that inspire action and turn visitors into loyal customers.
-  title: Growth Framework
+  description: We don’t just develop—we engineer platforms that drive action.
+    Using behavioral psychology, we design experiences that turn visitors into
+    engaged, paying customers.
+  title: Built for Growth
   ---
   #image
   ![live-in-weeks.png](/growth-framework.png)
@@ -42,8 +43,8 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   :::bento-card
   ---
   card-classes: row-span-2 lg:col-span-5
-  description: With Slack, you get updates, make requests, and stay in control—all
-    faster and easier than ever.
+  description: Forget back-and-forth emails that slow everything down. Get
+    updates, ask questions, and make decisions instantly—directly in Slack.
   title: Bye Emails, Hello Slack
   ---
   #image
@@ -53,9 +54,9 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   :::bento-card
   ---
   card-classes: lg:col-span-7 lg:row-span-1
-  description: Our modular, interactive offers let you easily select the features
-    that matter most. Simply add or remove what aligns with your priorities.
-  title: Choose What’s Important to You
+  description: No bloated packages, no unnecessary extras. Our modular offers let
+    you choose exactly what fits your needs.
+  title: You Decide What Matters
   ---
   #image
   ![choose-whats-important-to-you.png](/choose-what-is-important-to-you.png)
@@ -64,9 +65,9 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   :::bento-card
   ---
   card-classes: lg:col-span-7 lg:row-span-1
-  description: Our modular, interactive offers let you easily select the features
-    that matter most. Simply add or remove what aligns with your priorities.
-  title: Fewer Projects, Full Attention
+  description: We don’t take on dozens of clients at once. We keep our workload
+    lean so every project gets the attention, care, and precision it deserves.
+  title: Fewer Projects, Full Focus
   ---
   #image
   ![choose-whats-important-to-you.png](/fewer-projects.png)
@@ -77,9 +78,9 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   card-classes: lg:col-span-12 lg:row-span-1 [&>div]:flex
     [&>div>div:last-child]:lg:w-2/5 [&>div>div:first-child]:lg:w-3/5
     [&>div>div:first-child]:order-last
-  description: Our modular, interactive offers let you easily select the features
-    that matter most. Simply add or remove what aligns with your priorities.
-  title: We Think Ahead for You
+  description: We don’t just build what you ask for—we anticipate challenges,
+    suggest better solutions, and make sure your product is ready for what’s next.
+  title: Thinking Ahead
   ---
   #image
   ![choose-whats-important-to-you.png](/proactive.png)
