1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -78,8 +78,8 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   card-classes: lg:col-span-12 lg:row-span-1 [&>div]:flex
     [&>div>div:last-child]:lg:w-2/5 [&>div>div:first-child]:lg:w-3/5
     [&>div>div:first-child]:order-last
-  description: We don’t just build what you ask for—we anticipate challenges,
-    suggest better solutions, and make sure your product is ready for what’s next.
+  description: Our modular, interactive offers let you easily select the features
+    that matter most. Simply add or remove what aligns with your priorities.
   title: Thinking Ahead
   ---
   #image
