1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -31,9 +31,8 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   :::bento-card
   ---
   card-classes: lg:row-span-1 lg:col-span-5
-  description: We don’t just develop—we engineer platforms that drive action.
-    Using behavioral psychology, we design experiences that turn visitors into
-    engaged, paying customers.
+  description: Using behavioral psychology, we design experiences that turn
+    visitors into engaged, paying customers.
   title: Built for Growth
   ---
   #image
@@ -78,8 +77,8 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   card-classes: lg:col-span-12 lg:row-span-1 [&>div]:flex
     [&>div>div:last-child]:lg:w-2/5 [&>div>div:first-child]:lg:w-3/5
     [&>div>div:first-child]:order-last
-  description: Our modular, interactive offers let you easily select the features
-    that matter most. Simply add or remove what aligns with your priorities.
+  description: We don’t just build what you ask for—we anticipate challenges,
+    suggest better solutions, and make sure your product is ready for what’s next.
   title: Thinking Ahead
   ---
   #image
