1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -43,7 +43,7 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   ---
   card-classes: row-span-2 lg:col-span-5
   description: Forget back-and-forth emails that slow everything down. Get
-    updates, ask questions, and make decisions instantly—directly in Slack.
+    updates, ask questions, make decisions—directly in Slack.
   title: Bye Emails, Hello Slack
   ---
   #image
