1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -19,6 +19,7 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   :::bento-card
   ---
   card-classes: lg:row-span-1 lg:col-span-7
+  card-wrapper-classes: flex flex-col
   description: Every day your project isn’t live is a day you’re losing potential
     revenue. We move fast—without cutting corners—so you can start selling,
     scaling, and growing in record time.
@@ -31,6 +32,7 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   :::bento-card
   ---
   card-classes: lg:row-span-1 lg:col-span-5
+  card-wrapper-classes: flex flex-col
   description: Using behavioral psychology, we design experiences that turn
     visitors into engaged, paying customers.
   title: Built for Growth
@@ -42,6 +44,7 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   :::bento-card
   ---
   card-classes: row-span-2 lg:col-span-5
+  card-wrapper-classes: flex flex-col
   description: Forget back-and-forth emails that slow everything down. Get
     updates, ask questions, make decisions—directly in Slack.
   title: Bye Emails, Hello Slack
@@ -53,6 +56,7 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   :::bento-card
   ---
   card-classes: lg:col-span-7 lg:row-span-1
+  card-wrapper-classes: flex flex-col
   description: No bloated packages, no unnecessary extras. Our modular offers let
     you choose exactly what fits your needs.
   title: You Decide What Matters
@@ -64,6 +68,7 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   :::bento-card
   ---
   card-classes: lg:col-span-7 lg:row-span-1
+  card-wrapper-classes: flex flex-col
   description: We don’t take on dozens of clients at once. We keep our workload
     lean so every project gets the attention, care, and precision it deserves.
   title: Fewer Projects, Full Focus
@@ -77,6 +82,7 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   card-classes: lg:col-span-12 lg:row-span-1 [&>div]:flex
     [&>div>div:last-child]:lg:w-2/5 [&>div>div:first-child]:lg:w-3/5
     [&>div>div:first-child]:order-last
+  card-wrapper-classes: flex flex-row
   description: We don’t just build what you ask for—we anticipate challenges,
     suggest better solutions, and make sure your product is ready for what’s next.
   title: Thinking Ahead
