1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -69,8 +69,8 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   ---
   card-classes: lg:col-span-7 lg:row-span-1
   card-wrapper-classes: flex flex-col
-  description: We don’t take on dozens of clients at once. We keep our workload
-    lean so every project gets the attention, care, and precision it deserves.
+  description: We keep our workload lean so every project gets the attention,
+    care, and precision it deserves.
   title: Fewer Projects, Full Focus
   ---
   #image
