1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -15,6 +15,10 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
 Traditional agencies build. **We build with impact.**:br **We analyze real user behavior** and refine every touchpoint to **drive conversions.**
 ::
 
+## [Beyond the Standard]{.text-center}
+
+[See what sets us apart—from our approach to execution. Focused, efficient, and built for what you actually need.]{.text-center}
+
 ::bento-grid{grid-classes="lg:grid-cols-12 auto-rows-auto"}
   :::bento-card
   ---
