--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -15,11 +15,13 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
 Traditional agencies build. **We build with impact.**:br **We analyze real user behavior** and refine every touchpoint to **drive conversions.**
 ::
 
-## [Beyond the Standard]{.text-center}
-
-[See what sets us apart—from our approach to execution. Focused, efficient, and built for what you actually need.]{.text-center}
-
-::bento-grid{grid-classes="lg:grid-cols-12 auto-rows-auto"}
+::bento-grid
+---
+description: See what sets us apart—from our approach to execution. Focused,
+  efficient, and built for what you actually need.
+grid-classes: lg:grid-cols-12 auto-rows-auto
+title: Beyond the Standard
+---
   :::bento-card
   ---
   card-classes: lg:row-span-1 lg:col-span-7
