--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -15,6 +15,25 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
 Traditional agencies build. **We build with impact.**:br **We analyze real user behavior** and refine every touchpoint to **drive conversions.**
 ::
 
+::portfolio
+---
+description: A selection of projects across different industries.
+title: Recent Projects
+---
+  :::portfolio-item
+  ---
+  category: saas
+  client-name: Clickmarketing
+  description: Take a look at Clickmarketing, a SaaS platform that helps local
+    businesses like gyms attract more customers by launching Facebook ads with
+    ready-made templates in just a few clicks.
+  tags: '["nuxt", "supabase", "facebook_api", "stripe_api", "vercel"]'
+  ---
+  #image
+  ![fbeb6a58c5533065502ee71314d37389.jpeg](/fbeb6a58c5533065502ee71314d37389.jpeg)
+  :::
+::
+
 ::bento-grid
 ---
 description: See what sets us apart—from our approach to execution. Focused,
