1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -32,6 +32,20 @@ title: Recent Projects
   #image
   ![fbeb6a58c5533065502ee71314d37389.jpeg](/fbeb6a58c5533065502ee71314d37389.jpeg)
   :::
+
+  :::portfolio-item
+  ---
+  category: ecommerce
+  client-name: VISIO
+  description: Take a look at VISIO, a Berlin-based streetwear brand that stands
+    for clean design, quality, and ethical production—built for those who chase
+    their dreams.
+  tags: '["shopify", "theme_development", "shop_relaunch", "data_migration",
+    "plugin_development", "email_marketing"]'
+  ---
+  #image
+  ![fbeb6a58c5533065502ee71314d37389.jpeg](/fbeb6a58c5533065502ee71314d37389.jpeg)
+  :::
 ::
 
 ::bento-grid
@@ -185,19 +199,19 @@ title: Words from our Clients
     ---
     Because cheap tech gets expensive fast. Slow platforms, poor UX, lost conversions—fixing that later costs more than doing it right from the start. We build software that works, scales, and pays off.
     ::::
-
+  
     ::::c-accordion-item{title="“What makes you different from other agencies?”"}
     Most agencies just build. We build with intent. Everything we create is optimized for real user behavior, fine-tuned with data, and designed to convert—so your product isn’t just functional, but profitable.
     ::::
-
+  
     ::::c-accordion-item{title="“How long does this take?”"}
     Longer than a no-code template, shorter than a never-ending project. We move fast without cutting corners. Timelines depend on the scope, but we’ll tell you exactly what to expect before we start.
     ::::
-
+  
     ::::c-accordion-item{title="“How much does it cost?”"}
     If you’re looking for cheap, we’re not it. Our E-Commerce projects start at $10k and custom software at $25k. Cutting corners now means fixing problems later. We create solutions that run smoothly, scale properly, and pay off in the long run.
     ::::
-
+  
     ::::c-accordion-item{title="“What if I don’t know exactly what I need?”"}
     You don’t have to. We help you figure out what makes sense, what moves the needle, and what’s worth building—so you invest in the right things.
     ::::
