2 changes by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -44,7 +44,7 @@ title: Recent Projects
     "plugin_development", "email_marketing"]'
   ---
   #image
-  ![fbeb6a58c5533065502ee71314d37389.jpeg](/fbeb6a58c5533065502ee71314d37389.jpeg)
+  ![fbeb6a58c5533065502ee71314d37389.jpeg](/Element_33_20f5a76f-92cf-49e4-9378-9de5c41b1d60.webp)
   :::
 ::
 
