1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -184,6 +184,34 @@ title: Words from our Clients
   :::
 ::
 
+::process
+---
+description: You know something needs to change—whether it’s a new build or an
+  upgrade. Here’s how we take it from idea to execution.
+title: What’s Next?
+---
+  :::process-item{number="1" title="Idea in Mind?"}
+  Maybe you have a vision for something new. Maybe your current setup isn’t cutting it. Either way, you know it’s time for the next step.
+  :::
+
+  :::process-item
+  ---
+  card-classes: bg-purple-700/30
+  number: "2"
+  title: Reach Out to Us
+  ---
+  Let’s talk. No complicated onboarding, just a quick conversation to see if we’re the right fit for your project.
+  :::
+
+  :::process-item{number="3" title="We Build What Works"}
+  With a clear plan in place, we design, develop, and fine-tune a solution that does exactly what it should—without unnecessary extras.
+  :::
+
+  :::process-item{number="4" title="Launch & Long-Term Support"}
+  Once your product is live, we don’t just disappear. Whether it’s improvements, scaling, or ongoing support, we’re here when you need us.
+  :::
+::
+
 ::c-container
   :::c-accordion
   ---
