--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -201,6 +201,9 @@ title: What’s Next?
   title: Reach Out to Us
   ---
   Let’s talk. No complicated onboarding, just a quick conversation to see if we’re the right fit for your project.
+  
+    ::::c-button{full="true" to="/en/contact"}
+    ::::
   :::
 
   :::process-item{number="3" title="We Build What Works"}
