1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -203,6 +203,7 @@ title: What’s Next?
   Let’s talk. No complicated onboarding, just a quick conversation to see if we’re the right fit for your project.
   
     ::::c-button{full="true" to="/en/contact"}
+    Contact Us
     ::::
   :::
 
