--- a/content/en/blog/1.how-to-grow-your-saas.md
+++ b/content/en/blog/1.how-to-grow-your-saas.md
@@ -3,7 +3,7 @@ title: How to make more Revenue with SaaS
 date: 2024-02-29T00:00:00.000Z
 author: Phillip
 content-image: /blog/f5c2a6b9f27540e291644e59cff69b5f.jpeg
-author-image: /blog/f5c2a6b9f27540e291644e59cff69b5f.jpeg''
+author-image: /blog/authors/T0709CKE4PP-U07113Q8HDW-d33a2495ab2b-512.jpeg
 category: saas
 tags:
   - SaaS
