1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -252,3 +252,15 @@ title: What’s Next?
 
 ::blog-listing{description="Lorem Ipsum" title="Lorem Ipsum"}
 ::
+
+::cta-section
+---
+cta-is-link-external: "false"
+cta-link: /en/contact
+cta-text: Let’s Do This
+description: You’ve probably been thinking about it for months, if not years.
+  Now’s the time to build it—with a team that gets it.
+heading: Your Idea Has Waited Long Enough
+variant: space
+---
+::
