5 changes by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -16,7 +16,12 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
 ::
 
 ::row
-  :::c-card{heading="Card Heading"}
+  :::c-card
+  ---
+  background: backgrounds/texture.png
+  heading: Card Heading
+  icon: icons/icon.png
+  ---
   Lorem Ipsum
   :::
 
