--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -19,14 +19,38 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
   :::c-card
   ---
   background: backgrounds/texture.png
-  heading: Card Heading
+  heading: UX/UI Design
   icon: icons/icon.png
   ---
-  Lorem Ipsum
+  No distractions, no fluff—just sharp, conversion-driven design that makes buying effortless.
   :::
 
-  :::c-card{heading="Card Heading"}
-  Lorem Ipsum
+  :::c-card{heading="Theme Development"}
+  Custom-built themes that fit your brand and work exactly as they should—fast and smooth.
+  :::
+
+  :::c-card{heading="Plugin Development"}
+  When out-of-the-box isn’t enough, we build the features your shop actually needs.
+  :::
+
+  :::c-card{heading="Shop Relaunch"}
+  Your store, but better. Faster, cleaner, and built to sell more.
+  :::
+
+  :::c-card{heading="Growth Hacking"}
+  Real data, smart tweaks—more sales without more traffic.
+  :::
+
+  :::c-card{heading="Headless E-Commerce"}
+  Faster load times, full flexibility, and no platform limitations.
+  :::
+
+  :::c-card{heading="B2B Solutions"}
+  Custom portals, personalized pricing, and seamless bulk ordering.
+  :::
+
+  :::c-card{heading="Shop Migration"}
+  Move your shop without downtime or headaches—just better performance.
   :::
 ::
 
