--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -15,6 +15,16 @@ Your platform is a tool for growth, not just a pretty face. We design and develo
 Traditional agencies build. **We build with impact.**:br **We analyze real user behavior** and refine every touchpoint to **drive conversions.**
 ::
 
+::tabs
+  :::tab-item
+    ::::row
+      :::::c-card{heading="Card Heading"}
+      This is my card content
+      :::::
+    ::::
+  :::
+::
+
 ::row
   :::c-card
   ---
