1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -16,7 +16,7 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
 ::
 
 ::tabs
-  :::tab-item
+  :::tab-item{title="E-Commerce"}
     ::::row
       :::::c-card{heading="Card Heading"}
       This is my card content
