1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -16,53 +16,90 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
 ::
 
 ::tabs
-  :::tab-item{title="E-Commerce"}
+  :::tab-item{title="SaaS"}
     ::::row
-      :::::c-card{heading="Card Heading"}
-      This is my card content
+      :::::c-card
+      ---
+      background: backgrounds/texture.png
+      heading: UX/UI Design
+      heading-size: s
+      heading-tag: h3
+      icon: icons/icon.png
+      ---
+      No distractions, no fluff—just sharp, conversion-driven design that makes buying effortless.
+      :::::
+    
+      :::::c-card{heading="Theme Development" heading-size="s" heading-tag="h3"}
+      Custom-built themes that fit your brand and work exactly as they should—fast and smooth.
+      :::::
+    
+      :::::c-card{heading="Plugin Development" heading-size="s" heading-tag="h3"}
+      When out-of-the-box isn’t enough, we build the features your shop actually needs.
+      :::::
+    
+      :::::c-card{heading="Shop Relaunch" heading-size="s" heading-tag="h3"}
+      Your store, but better. Faster, cleaner, and built to sell more.
+      :::::
+    
+      :::::c-card{heading="Growth Hacking" heading-size="s" heading-tag="h3"}
+      Real data, smart tweaks—more sales without more traffic.
+      :::::
+    
+      :::::c-card{heading="Headless E-Commerce" heading-size="s" heading-tag="h3"}
+      Faster load times, full flexibility, and no platform limitations.
+      :::::
+    
+      :::::c-card{heading="B2B Solutions" heading-size="s" heading-tag="h3"}
+      Custom portals, personalized pricing, and seamless bulk ordering.
+      :::::
+    
+      :::::c-card{heading="Shop Migration" heading-size="s" heading-tag="h3"}
+      Move your shop without downtime or headaches—just better performance.
       :::::
     ::::
   :::
-::
 
-::row
-  :::c-card
-  ---
-  background: backgrounds/texture.png
-  heading: UX/UI Design
-  heading-size: s
-  heading-tag: h3
-  icon: icons/icon.png
-  ---
-  No distractions, no fluff—just sharp, conversion-driven design that makes buying effortless.
-  :::
-
-  :::c-card{heading="Theme Development" heading-size="s" heading-tag="h3"}
-  Custom-built themes that fit your brand and work exactly as they should—fast and smooth.
-  :::
-
-  :::c-card{heading="Plugin Development" heading-size="s" heading-tag="h3"}
-  When out-of-the-box isn’t enough, we build the features your shop actually needs.
-  :::
-
-  :::c-card{heading="Shop Relaunch" heading-size="s" heading-tag="h3"}
-  Your store, but better. Faster, cleaner, and built to sell more.
-  :::
-
-  :::c-card{heading="Growth Hacking" heading-size="s" heading-tag="h3"}
-  Real data, smart tweaks—more sales without more traffic.
-  :::
-
-  :::c-card{heading="Headless E-Commerce" heading-size="s" heading-tag="h3"}
-  Faster load times, full flexibility, and no platform limitations.
-  :::
-
-  :::c-card{heading="B2B Solutions" heading-size="s" heading-tag="h3"}
-  Custom portals, personalized pricing, and seamless bulk ordering.
-  :::
-
-  :::c-card{heading="Shop Migration" heading-size="s" heading-tag="h3"}
-  Move your shop without downtime or headaches—just better performance.
+  :::tab-item{title="S"}
+    ::::row
+      :::::c-card
+      ---
+      background: backgrounds/texture.png
+      heading: UX/UI Design
+      heading-size: s
+      heading-tag: h3
+      icon: icons/icon.png
+      ---
+      No distractions, no fluff—just sharp, conversion-driven design that makes buying effortless.
+      :::::
+    
+      :::::c-card{heading="Theme Development" heading-size="s" heading-tag="h3"}
+      Custom-built themes that fit your brand and work exactly as they should—fast and smooth.
+      :::::
+    
+      :::::c-card{heading="Plugin Development" heading-size="s" heading-tag="h3"}
+      When out-of-the-box isn’t enough, we build the features your shop actually needs.
+      :::::
+    
+      :::::c-card{heading="Shop Relaunch" heading-size="s" heading-tag="h3"}
+      Your store, but better. Faster, cleaner, and built to sell more.
+      :::::
+    
+      :::::c-card{heading="Growth Hacking" heading-size="s" heading-tag="h3"}
+      Real data, smart tweaks—more sales without more traffic.
+      :::::
+    
+      :::::c-card{heading="Headless E-Commerce" heading-size="s" heading-tag="h3"}
+      Faster load times, full flexibility, and no platform limitations.
+      :::::
+    
+      :::::c-card{heading="B2B Solutions" heading-size="s" heading-tag="h3"}
+      Custom portals, personalized pricing, and seamless bulk ordering.
+      :::::
+    
+      :::::c-card{heading="Shop Migration" heading-size="s" heading-tag="h3"}
+      Move your shop without downtime or headaches—just better performance.
+      :::::
+    ::::
   :::
 ::
 
