--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -59,7 +59,7 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
     ::::
   :::
 
-  :::tab-item{title="S"}
+  :::tab-item{title="E-Commerce"}
     ::::row
       :::::c-card
       ---
