1 change by Nuxt Studio

--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -26,7 +26,7 @@ Traditional agencies build. **We build with impact.**:br **We analyze real user 
       heading-tag: h3
       icon: icons/icon.png
       ---
-      No distractions, no fluff—just sharp, conversion-driven design that makes buying effortless.
+      Something else No distractions, no fluff—just sharp, conversion-driven design that makes buying effortless.
       :::::
     
       :::::c-card{heading="Theme Development" heading-size="s" heading-tag="h3"}
